# $Id: configure.in,v 1.13 2006-10-03 20:33:11 hww3 Exp $
AC_INIT(xml2_config.h.in)

AC_MODULE_INIT()
AC_CONFIG_HEADERS(xml2_config.h)

cmd=`which xml2-config`
if test "x$cmd" != "x" ; then
echo "checking $cmd for flags..."
XML2_CFLAGS=`$cmd --cflags`
XML2_LIBS=`$cmd --libs`
echo "  FLAGS: $XML2_CFLAGS"
echo "  LIBS: $XML2_LIBS"
fi

cmd=`which xslt-config`
if test "x$cmd" != "x" ; then
echo "checking $cmd for flags..."
XSLT_CFLAGS=`$cmd --cflags`
XSLT_LIBS=`$cmd --libs`
echo "  FLAGS: $XSLT_CFLAGS"
echo "  LIBS: $XSLT_LIBS"
fi

CPPFLAGS="${CPPFLAGS} ${XML2_CFLAGS} ${XSLT_CFLAGS}"
LDFLAGS="${LDFLAGS} ${XML2_LIBS} ${XSLT_LIBS}"

AC_CHECK_FUNCS(strlcpy)
AC_CHECK_FUNCS(memcpy)

AC_CHECK_HEADERS(libxml/parser.h)
AC_CHECK_HEADERS(libxml/parserInternals.h)
AC_CHECK_HEADERS(libxml/xpath.h)
AC_CHECK_HEADERS(libxml/SAX2.h)
AC_CHECK_HEADERS(libxml/xmlreader.h)
AC_CHECK_HEADERS(libxml/relaxng.h)
AC_CHECK_HEADERS(libxml/HTMLtree.h)

AC_CHECK_HEADERS(libxslt/xslt.h)
AC_CHECK_HEADERS(libxslt/xsltInternals.h)
AC_CHECK_HEADERS(libxslt/transform.h)
AC_CHECK_HEADERS(libxslt/xsltutils.h)
AC_CHECK_HEADERS(libxslt/document.h)
AC_CHECK_HEADERS(libxslt/documents.h)

AC_CHECK_LIB(xml2, xmlCleanupParser) 
AC_CHECK_LIB(xslt, xsltInit) 

AC_CHECK_FUNCS(xmlNewDocPI) 
AC_CHECK_FUNCS(xsltSetLoaderFunc) 
AC_CHECK_FUNCS(xmlTextReaderGetParserLineNumber)
AC_CHECK_FUNCS(xmlTextReaderGetParserColumnNumber)
AC_CHECK_FUNCS(xmlTextReaderIsNamespaceDecl)

AC_SUBST(XML2_CFLAGS) 
AC_SUBST(XML2_LIBS)

AC_SUBST(XSLT_CFLAGS) 
AC_SUBST(XSLT_LIBS)

AC_OUTPUT(Makefile)

